--- a/test/testdata/echo-server.yaml
+++ b/test/testdata/echo-server.yaml
@@ -13,7 +13,8 @@ spec:
     spec:
       containers:
       - name: echo-server
-        image: jmalloc/echo-server
+        image: jmalloc/echo-server:0.3.5
+        imagePullPolicy: IfNotPresent
 ---
 apiVersion: v1
 kind: Service
