--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -11,7 +11,7 @@ ARG gke_auth_plugin_version=0.1.1
 ARG TARGETARCH=amd64
 RUN set -x \
     && apk add --update --no-cache curl ca-certificates \
-    && curl -fsSL "https://github.com/traviswt/gke-auth-plugin/releases/download/${gke_auth_plugin_version}/gke-auth-plugin_Linux_${TARGETARCH}.tar.gz" \
+    && curl -fsSL "https://github.com/traviswt/gke-auth-plugin/releases/download/${gke_auth_plugin_version}/gke-auth-plugin_Linux_$( [[ ${TARGETARCH} == 'amd64' ]] && echo 'x86_64' || echo ${TARGETARCH} ).tar.gz" \
     |  tar -C /usr/local/bin -xzvf- gke-auth-plugin \
     && gke-auth-plugin version
 EXPOSE 9999
