--- a/config/crd/bases/extensions.tsuru.io_rpaasflavors.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasflavors.yaml
@@ -104,6 +104,10 @@ spec:
                               define the requests per second Prometheus query. Mandatory
                               if Enabled field is true.
                             type: string
+                          timezone:
+                            description: Timezone is a zone name registered on IANA
+                              time zone database, e.g. "America/Sao_Paulo".
+                            type: string
                         type: object
                       maxReplicas:
                         description: MaxReplicas is the upper limit for the number
@@ -116,6 +120,34 @@ spec:
                           Defaults to the RpaasInstance replicas value.
                         format: int32
                         type: integer
+                      schedules:
+                        description: Schedules are the time windows where the minimum
+                          replica count should change.
+                        items:
+                          properties:
+                            end:
+                              description: End is a Cron expression indicating the
+                                end of the scheduled window.
+                              type: string
+                            minReplicas:
+                              description: MinReplicas is the minimum replica count
+                                set while the scheduled window is active.
+                              format: int32
+                              type: integer
+                            start:
+                              description: Start is a Cron expression indicating the
+                                start of the shedule window.
+                              type: string
+                            timezone:
+                              description: Timezone is a zone name registered on IANA
+                                time zone database, e.g. "America/Sao_Paulo".
+                              type: string
+                          required:
+                          - end
+                          - minReplicas
+                          - start
+                          type: object
+                        type: array
                       targetCPUUtilizationPercentage:
                         description: TargetCPUUtilizationPercentage is the target
                           average CPU utilization over all the pods. Represented as
