--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -61,8 +61,8 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name != 'pull_request'
     steps:
-    - uses: actions/checkout@v2
-    - uses: docker/setup-buildx-action@v1
+    - uses: actions/checkout@v4
+    - uses: docker/setup-buildx-action@v3
     - uses: actions/cache@v2
       with:
         path: /tmp/.buildx-cache
@@ -75,17 +75,18 @@ jobs:
         docker_image: tsuru/rpaas-api
         default_branch: main
         tag_with_sha: "true"
-    - uses: docker/login-action@v1
+    - uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
-    - uses: docker/build-push-action@v2
+    - uses: docker/build-push-action@v5
       with:
         file: ./Dockerfile.api
         push: true
         tags: ${{ steps.smarttag.outputs.tag }}
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
+        platforms: linux/amd64,linux/arm64
 
   rpaas-operator-docker-image:
     name: "Publish rpaas-operator image on dockerhub"
@@ -95,8 +96,8 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name != 'pull_request'
     steps:
-    - uses: actions/checkout@v2
-    - uses: docker/setup-buildx-action@v1
+    - uses: actions/checkout@v4
+    - uses: docker/setup-buildx-action@v3
     - uses: actions/cache@v2
       with:
         path: /tmp/.buildx-cache
@@ -109,17 +110,18 @@ jobs:
         docker_image: tsuru/rpaas-operator
         default_branch: main
         tag_with_sha: "true"
-    - uses: docker/login-action@v1
+    - uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
-    - uses: docker/build-push-action@v2
+    - uses: docker/build-push-action@v5
       with:
         file: ./Dockerfile.operator
         push: true
         tags: ${{ steps.smarttag.outputs.tag }}
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
+        platforms: linux/amd64,linux/arm64
 
   rpaas-purger-docker-image:
     name: "Publish rpaas-purger image on dockerhub"
@@ -129,8 +131,8 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name != 'pull_request'
     steps:
-    - uses: actions/checkout@v2
-    - uses: docker/setup-buildx-action@v1
+    - uses: actions/checkout@v4
+    - uses: docker/setup-buildx-action@v3
     - uses: actions/cache@v2
       with:
         path: /tmp/.buildx-cache
@@ -143,17 +145,18 @@ jobs:
         docker_image: tsuru/rpaas-purger
         default_branch: main
         tag_with_sha: "true"
-    - uses: docker/login-action@v1
+    - uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
-    - uses: docker/build-push-action@v2
+    - uses: docker/build-push-action@v5
       with:
         file: ./Dockerfile.purger
         push: true
         tags: ${{ steps.smarttag.outputs.tag }}
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
+        platforms: linux/amd64,linux/arm64
 
   release:
     name: "Release artifacts on github"
