--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -8,7 +8,7 @@ RUN set -x \
 FROM alpine:3.18
 COPY --from=builder /go/src/github.com/tsuru/rpaas-operator/bin/api /bin/rpaas-api
 ARG gke_auth_plugin_version=0.1.1
-ARG TARGETARCH=amd64
+ARG TARGETARCH
 RUN set -x \
     && apk add --update --no-cache curl ca-certificates \
     && curl -fsSL "https://github.com/traviswt/gke-auth-plugin/releases/download/${gke_auth_plugin_version}/gke-auth-plugin_Linux_$( [[ ${TARGETARCH} == 'amd64' ]] && echo 'x86_64' || echo ${TARGETARCH} ).tar.gz" \
