add TemplateExtraVars to NginxConfig

--- a/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
@@ -524,6 +524,10 @@ spec:
                         type: string
                       syslogTag:
                         type: string
+                      templateExtraVars:
+                        additionalProperties:
+                          type: string
+                        type: object
                       upstreamKeepalive:
                         type: integer
                       user:
