--- a/config/crd/bases/extensions.tsuru.io_rpaasflavors.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasflavors.yaml
@@ -540,6 +540,10 @@ spec:
                             type: string
                           syslogTag:
                             type: string
+                          templateExtraVars:
+                            additionalProperties:
+                              type: string
+                            type: object
                           upstreamKeepalive:
                             type: integer
                           user:
