--- a/config/crd/bases/extensions.tsuru.io_rpaasplans.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasplans.yaml
@@ -96,6 +96,10 @@ spec:
                     type: string
                   syslogTag:
                     type: string
+                  templateExtraVars:
+                    additionalProperties:
+                      type: string
+                    type: object
                   upstreamKeepalive:
                     type: integer
                   user:
