propagate nginx external addresses to rpaasinstance

--- a/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
@@ -25,6 +25,12 @@ spec:
     - jsonPath: .metadata.creationTimestamp
       name: Age
       type: date
+    - jsonPath: .status.externalAddresses.ips[*]
+      name: IPs
+      type: string
+    - jsonPath: .status.externalAddresses.hostnames[*]
+      name: Hostnames
+      type: string
     name: v1alpha1
     schema:
       openAPIV3Schema:
@@ -6267,6 +6273,18 @@ spec:
                 description: CurrentReplicas is the last observed number of pods.
                 format: int32
                 type: integer
+              externalAddresses:
+                description: External IP addreses of Nginx
+                properties:
+                  hostnames:
+                    items:
+                      type: string
+                    type: array
+                  ips:
+                    items:
+                      type: string
+                    type: array
+                type: object
               nginxUpdated:
                 description: NginxUpdated is true if the wanted nginx revision hash
                   equals the observed nginx revision hash.
