Allow rate-limit of changes on cluster (#147)
* Add initial draft to allow limit number of changes on cluster

* Update lint

* Simplify way to measure progress of system rollouts by emiting k8s events

* Applying @crgisch suggestions, thanks

--- a/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
@@ -6476,8 +6476,11 @@ spec:
               podSelector:
                 description: PodSelector is the NGINX's pod label selector.
                 type: string
+              revisionHash:
+                description: Revision hash calculated for the current spec of rpaasinstance
+                type: string
               wantedNginxRevisionHash:
-                description: Revision hash calculated for the current spec.
+                description: Revision hash calculated for the current spec of nginx.
                 type: string
             required:
             - nginxUpdated
