Remove pointer in manifest files

--- a/config/crd/bases/extensions.tsuru.io_rpaasflavors.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasflavors.yaml
@@ -6636,7 +6636,7 @@ spec:
                   shutdown:
                     default: false
                     description: Shutdown flag tells whether controller should scale
-                      down Nginx instances. And any assosciated HorizontalPodAutoscaler
+                      down Nginx instances. Any assosciated HorizontalPodAutoscaler
                       is remove/created when this flag is toggled.
                     type: boolean
                   suspend:
