Enable RpaasInstance shutting down using Shutdown flag (#149)
* Enable instance shuting down using Shutdown flag

* Fix doc string

* Remove unnecessary pointer

* Remove pointer in manifest files

* Changing isAutoscaleEnabled param

* Testing Shutdown flag

* Code review

---------

Co-authored-by: Guilherme Vicentin <guilherme.vicentin@g.globo>

--- a/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
@@ -6381,6 +6381,12 @@ spec:
                       true.
                     type: boolean
                 type: object
+              shutdown:
+                default: false
+                description: Shutdown flag tells whether controller should scale down
+                  Nginx instances. Any assosciated HorizontalPodAutoscaler is remove/created
+                  when this flag is toggled.
+                type: boolean
               suspend:
                 default: false
                 description: Suspend flag tells whether controller should suspend
