Showing Shutdown when using kubectl get rpaasinstance

--- a/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
+++ b/config/crd/bases/extensions.tsuru.io_rpaasinstances.yaml
@@ -22,6 +22,9 @@ spec:
     - jsonPath: .spec.suspend
       name: Suspended
       type: boolean
+    - jsonPath: .spec.shutdown
+      name: Shutdown
+      type: boolean
     - jsonPath: .metadata.creationTimestamp
       name: Age
       type: date
