--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,9 +10,10 @@ jobs:
     - uses: actions/setup-go@v3
       with:
         go-version: "1.21"
-    - uses: golangci/golangci-lint-action@v3
+    - uses: golangci/golangci-lint-action@v6
       with:
-        version: v1.58
+        version: v1.59
+        args: --timeout=10m
     - run: make test
 
   integration:
