API of validation (#148)
* Start to work on a proposal of validation of config

* first validation controller

* Avoid race condition using validation-hash on pod

* Design a validation manager

* initialize validation manager

* Add role

* wait last generation of status on rpaas-api

* working to validate file

* Add tests about validation

* Remove duplicated imports

* Add tests about desired volumes and volumeMounts

* Add tests that covers creation of validation pod

* use k8s.io/utils/ptr instead of k8s.io/utils/pointer

* Fix order of import

* go mod tidy

* Upgrade golangci-lint

* Update nginx-operator

* Add flag by cluster to disable validation

* fix race condition

* Upgrade kubernetes and version of rpaas-operator

* Include CRD of RPaaSValidation on kustomize

* Review some codes

* Update lint

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,9 +10,10 @@ jobs:
     - uses: actions/setup-go@v3
       with:
         go-version: "1.21"
-    - uses: golangci/golangci-lint-action@v3
+    - uses: golangci/golangci-lint-action@v6
       with:
-        version: v1.56
+        version: v1.59
+        args: --timeout=10m
     - run: make test
 
   integration:
@@ -21,8 +22,8 @@ jobs:
       fail-fast: true
       matrix:
         k8s_version:
-        - 1.24.13 # current version at GKE stable channel (https://cloud.google.com/kubernetes-engine/docs/release-notes#current_versions)
-        - 1.25.8  # current version at GKE regular channel (https://cloud.google.com/kubernetes-engine/docs/release-notes#current_versions)
+        - 1.27.11 # current version at GKE stable channel (https://cloud.google.com/kubernetes-engine/docs/release-notes#current_versions)
+        - 1.28.7  # current version at GKE regular channel (https://cloud.google.com/kubernetes-engine/docs/release-notes#current_versions)
     steps:
       - uses: actions/checkout@master
       - name: Running up Kubernetes (using Minikube)
